--- a/task_js/index.html
+++ b/task_js/index.html
@@ -6,17 +6,18 @@
     <title>Document</title>
 </head>
 <body>
-    <img id="img-id" src="watch.jpg"  class="img-fluid mb-3" style="width: 300px; height: 300px;">
+    <!-- <img id="img-id" src="watch.jpg"  class="img-fluid mb-3" style="width: 300px; height: 300px;">
 
-  <button class="btn btn-primary" onclick="handleImgChange()">Change</button>
-   <div class="container">
+  <button class="btn btn-primary" onclick="handleImgChange()">Change</button> -->
+
+  <div class="container">
         <form class="row mt-3 gy-3" id="user-form">
             <div class="col-6">
-                <input type="text" id="userName" class="form-control" placeholder="enter your name" >
-                <h2></h2>
+                <input type="text" id="userName" class="form-control" placeholder="enter your name"  required>
+                
             </div>
             <div class="col-6">
-                <input type="text" id="userEmail" placeholder="enter your email" class="form-control">
+                <input type="text" id="userEmail" placeholder="enter your email" class="form-control"    required>
             </div>
             <div class="col-12">
                 <button class="btn btn-primary">Add User</button>
@@ -24,6 +25,13 @@
         </form>
 
     </div>
+
+    
+    <div class="container mt-4">
+        <div id="users-list" style="background-color: antiquewhite;">
+        </div>
+    </div>
+
     <script src="script1.js"></script>
 </body>
 </html>
